implementar volumenes en ambas app para podes probar cambios rapidamente con docker compose sin tener que volver a buildear las imagenes

--- a/TPI AYSO/docker-compose.yml
+++ b/TPI AYSO/docker-compose.yml
@@ -6,11 +6,15 @@ services:
       - tpi-ayso-red
     ports:
       - "5000:5000"
+    volumes:
+      - ./servidor:/usr/src/app
   cliente:
     build: ./cliente
     container_name: cliente_ayso
     networks:
       - tpi-ayso-red
+    volumes:
+      - ./cliente:/usr/src/app
     depends_on:
       - servidor
 networks:
